Try and fix background image on mobile.

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -20,7 +20,7 @@ body {
   position: relative;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-position: right, center;
+  background-position: right, bottom;
   background-size: cover;
 }
 
